# moai-stack

./: .env.sample  .gitignore  Makefile  Modelfile.moai  README.md  docker-compose.yml
tests/e2e/: conftest.py  pyproject.toml  test_create_persona.py  test_gp1_ingest.py  test_gp2_chat.py  test_gp3_voice.py  test_gp4_ui.py  test_preconditions.py
tests/e2e/fixtures/personas/: ada-mcleish.md
tests/e2e/fixtures/personas/ada-mcleish/scenarios/: shift-cut-corridor.md
tests/e2e/helpers/: audio.py  config.py  create_http.py  gen_transport.py  openwebui.py  preconditions.py  qdrant_admin.py  scenario_md.py  store_http.py  test_audio.py  test_config.py  test_scenario_md.py
