[project]
name = "moai-stack-e2e"
version = "0.0.0"
description = "End-to-end integration tests for the moai-stack composition."
requires-python = ">=3.11,<4.0"
dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "qdrant-client>=1.12,<2",
  "python-frontmatter>=1.1",
  "pyyaml>=6.0",
  # Driver primitives, pinned to the PUBLISHED wheels the composition targets
  # (not local source). Both are public wheels in the muxu-io GitLab package
  # registry, each in its own project (persona-cli: 83774809, persona-core:
  # 83381755) — the Makefile passes both project PyPI indexes as extra indexes.
  "persona-core==1.0.0",
  "persona-cli==1.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["helpers*"]

[tool.pytest.ini_options]
testpaths = ["."]
addopts = "-ra"
asyncio_mode = "auto"
